[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ros1_cmd_vel_bridge"
version = "0.0.0"
dependencies = [
    "roslibpy",
    "pyyaml",
    "numpy",
]
requires-python = ">=3.8"

[project.scripts]
cmd_vel_forwarder = "ros1_cmd_vel_bridge.cmd_vel_forwarder:main"